--- a/src/styling/Navigation.css
+++ b/src/styling/Navigation.css
@@ -1,4 +1,7 @@
 .title-settings{
     color: black;
     text-decoration: none;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
 }
