Added in the approved questions and functionality, including descriptions, labels, and disabled slider when location tracking is turned off. Read for Usability Tests

--- a/src/styling/Questionaire.css
+++ b/src/styling/Questionaire.css
@@ -27,11 +27,17 @@
 }
 
 .Overlay-placement{
-    width:50%;
+    width:60%;
 }
 
 .save-button-div{
     display: flex;
     flex-flow: row nowrap;
-    justify-content: center;
+    justify-content: c
+    
+    
+}
+.specific-slider-label-padding{
+    /* margin-left: 1rem; */
+    padding-left: 1rem;
 }
